fix(ai): align suggestion controls with figma

--- a/app/assets/stylesheets/folio/console/bootstrap-overrides/_forms.sass
+++ b/app/assets/stylesheets/folio/console/bootstrap-overrides/_forms.sass
@@ -71,6 +71,8 @@ legend
     height: auto
     min-height: px-to-rem(20px)
     padding-right: 0
+    right: 0
+    top: 0
     z-index: 2
 
 .form-control,
